--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,9 @@
     "tests"
   ],
   "dependencies": {
+    "backbone-amd": "~1.1.0",
+    "underscore-amd": "~1.5.2",
     "jquery": "~2.1.1",
-    "backbone": "~1.1.2"
+    "requirejs": "~2.1.15"
   }
 }
